--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ jobs:
         - moodle-plugin-ci phplint
         - moodle-plugin-ci phpcpd
         - moodle-plugin-ci phpmd
+        - moodle-plugin-ci phpdoc
         - moodle-plugin-ci codechecker
         - moodle-plugin-ci savepoints
         - moodle-plugin-ci mustache
