--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,12 @@ env:
     - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
     - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE
     - DB=pgsql MOODLE_BRANCH=MOODLE_310_STABLE
+    - DB=pgsql MOODLE_BRANCH=MOODLE_311_STABLE
     - DB=pgsql MOODLE_BRANCH=master
     - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
     - DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE
     - DB=mysqli MOODLE_BRANCH=MOODLE_310_STABLE
+    - DB=mysqli MOODLE_BRANCH=MOODLE_311_STABLE
     - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
@@ -60,7 +62,7 @@ jobs:
     # Smaller build matrix for development builds
     - stage: develop
       php: 7.4
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_310_STABLE
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_311_STABLE
   exclude:
     - php: 7.2
       env: DB=mysqli MOODLE_BRANCH=master
